[tool.poetry]
package-mode = false
name = "haldis"
version = "0.1.0"
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-Login = "^0.6.3"
Flask-Bootstrap = "^3.3.7.1"
Flask-SQLAlchemy = "^3.1.1"
Flask-DebugToolbar = "^0.15.1"
Flask-WTF = "^1.2.1"
Flask-Admin = "^1.6.1"
Flask-Migrate = "^4.0.7"
Flask-Script = "^2.0.6"
PyMySQL = "^1.1.1"
PyYAML = "^6.0.1"
TatSu = "^5.12.1"
microsoftgraph-python = "^1.1.8.1"
sentry-sdk = {extras = ["flask"], version = "^2.11.0"}
Authlib = "^1.3.1"
opening-hours-py = "^0.6.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
