[project]
name = "haldis"
version = "0.1.0"
requires-python = ">=3.12,<4"
readme = "README.md"
license = "AGPL"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "Flask>=3.0.3,<4",
    "Flask-Login>=0.6.3,<0.7",
    "Flask-Bootstrap>=3.3.7.1,<4",
    "Flask-SQLAlchemy>=3.1.1,<4",
    "Flask-DebugToolbar>=0.15.1,<0.16",
    "Flask-WTF>=1.2.1,<2",
    "Flask-Admin>=1.6.1,<2",
    "Flask-Migrate>=4.0.7,<5",
    "Flask-Script>=2.0.6,<3",
    "PyMySQL>=1.1.1,<2",
    "PyYAML>=6.0.1,<7",
    "TatSu>=5.12.1,<6",
    "microsoftgraph-python>=1.1.8.1,<2",
    "sentry-sdk[flask]>=2.11.0,<3",
    "Authlib>=1.3.1,<2",
    "opening-hours-py>=0.6.18,<0.7",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
